--- a/bsdesign-output/blogoverview.html
+++ b/bsdesign-output/blogoverview.html
@@ -55,8 +55,8 @@
         <div class="row mb-3">
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123 this is a long heading with a long ti...</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -65,8 +65,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -75,8 +75,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -85,8 +85,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -95,8 +95,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -105,8 +105,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -115,8 +115,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -125,8 +125,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -135,8 +135,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -145,8 +145,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -155,8 +155,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
@@ -165,8 +165,8 @@
             </div>
             <div class="col-12 col-md-6 col-xl-4 mb-4">
                 <div class="d-flex flex-column blogpost">
-                    <h3 class="text-center">Blog Post Test 123</h3>
-                    <p class="text-center">24th Feb, 2022</p>
+                    <h3 class="text-center two-line-heading">Blog Post Test 123</h3>
+                    <p class="text-center m-0">24th Feb, 2022</p>
                     <hr>
                     <div class="d-flex flex-column flex-fill justify-content-between">
                         <p>This is a test text I was too poor for lorem ipsum so instead i decided to just put some random text the text can also be a bit longer because why not roughly about three lines maybe four i think four is pretty good actually</p><a class="text-end" href="#">Read More</a>
